--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "grunt-contrib-watch": "~0.6",
     "grunt-dom-munger": "~3.4",
     "grunt-karma": "~0.8.3",
+    "jasmine-core": "^2.3.4",
     "karma": "~0.12.6",
     "karma-chrome-launcher": "~0.1.3",
     "karma-firefox-launcher": "~0.1.3",
-    "karma-jasmine": "~0.1.5",
+    "karma-jasmine": "~0.3",
     "karma-mocha-reporter": "~0.2.5",
     "karma-phantomjs-launcher": "~0.1.4",
     "load-grunt-tasks": "~0.2"
